--- a/example/index.html
+++ b/example/index.html
@@ -26,6 +26,7 @@
     width="640"
     height="264"
     poster="http://vjs.zencdn.net/v/oceans.png"
+    autoplay
     controls>
     <source src="http://vjs.zencdn.net/v/oceans.mp4" type='video/mp4' />
     <source src="http://vjs.zencdn.net/v/oceans.webm" type='video/webm' />
